syntax = "proto3";

package kms.v1;

service KmsEvmService {
  rpc SignEvm(SignEvmRequest) returns (SignEvmResponse);
  rpc GetSignerAddresses(GetSignerAddressesRequest) returns (GetSignerAddressesResponse);
}

message SignEvmRequest {
  string address = 1;
  bytes message = 2;
}

message SignEvmResponse {
  bytes signature = 1;
}

message GetSignerAddressesRequest {}

message GetSignerAddressesResponse {
  repeated string addresses = 1;
}
